plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.141'
    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
    id 'org.jetbrains.kotlin.plugin.lombok' version '2.1.20'
    id 'io.freefair.lombok' version '8.6'
}

version = mod_version
group = maven_group

base {
    archivesName = "${project.name}-${minecraft_version}"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    withSourcesJar()
}

kotlin {
    jvmToolchain(17)
    compilerOptions {
        jvmTarget = org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17
    }
}

configurations {
    libraries
    api.extendsFrom libraries

    localImplementation
    runtimeClasspath.extendsFrom localImplementation
    compileOnly.extendsFrom localImplementation

    yogaSources
    taffyLibrary
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = "https://maven.minecraftforge.net/" }
    maven { url = "https://maven.shedaniel.me/" }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven { url = "https://maven.architectury.dev/" }
    maven {
        name = "CurseForge"
        url = "https://cursemaven.com"
    }
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        name = "Kotlin for Forge"
        url = "https://thedarkcolour.github.io/KotlinForForge/"
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven { url = "https://maven.parchmentmc.org" }
    maven { url = "https://maven.quiltmc.org/repository/release" }
    maven {
        url = "https://maven.tterrag.com/"
        content {
            includeGroup("com.jozufozu.flywheel")
            includeGroup("com.tterrag.registrate")
            includeGroup("com.simibubi.create")
        }
    }
    maven { url = "https://maven.theillusivec4.top/" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { url = "https://jitpack.io/" }
    maven {
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
}

legacyForge {
    version = project.minecraft_version + '-' + project.forge_version
    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.minecraft_version
    }

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }

        client {
            client()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
            programArgument '--nogui'
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    srcDir(layout.buildDirectory.dir("generated/resources/taffy"))
}
sourceSets.main.kotlin { srcDir("src/main/java") }
sourceSets.main.java { srcDir(layout.buildDirectory.dir("generated/sources/yoga")) }

tasks.register('extractYogaSources', Copy) {
    from {
        zipTree(configurations.yogaSources.singleFile)
    }
    include '**/*.java'
    into layout.buildDirectory.dir("generated/sources/yoga")
}

tasks.named('compileJava') {
    dependsOn tasks.named('extractYogaSources')
}

tasks.named('compileKotlin') {
    dependsOn tasks.named('extractYogaSources')
}

tasks.register('vendorTaffyClasses', Copy) {
    from {
        zipTree(configurations.taffyLibrary.singleFile)
    }
    include '**/*.class'
    exclude 'module-info.class'
    into layout.buildDirectory.dir("generated/resources/taffy")
}

tasks.named('processResources') {
    dependsOn tasks.named('vendorTaffyClasses')
}

tasks.register('syncMixinRefmapForRuns', Copy) {
    dependsOn tasks.named('processResources')
    dependsOn tasks.named('compileJava')
    from layout.buildDirectory.file("tmp/compileJava/${mod_id}.refmap.json")
    into layout.buildDirectory.dir("resources/main")
}

tasks.configureEach {
    if (name in ['prepareRunClient', 'prepareRunServer', 'prepareRunGameTestServer', 'prepareRunData']) {
        dependsOn tasks.named('syncMixinRefmapForRuns')
    }
}

tasks.named('sourcesJar') {
    dependsOn tasks.named('vendorTaffyClasses')
    dependsOn tasks.named('extractYogaSources')
}

dependencies {
    interfaceInjectionData project.files('src/main/resources/ldlib2-interfaceinjection.json')

    modImplementation("maven.modrinth:kotlin-for-forge:${kotlin_for_forge_version}") {
        transitive = false
    }

    // JEI
    modImplementation("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}") { transitive = false }
    modImplementation("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}") { transitive = false }
    modImplementation("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")

    // REI
    modCompileOnly("me.shedaniel:RoughlyEnoughItems-default-plugin-forge:${rei_version}")
    modCompileOnly("me.shedaniel:RoughlyEnoughItems-api-forge:${rei_version}")
    modCompileOnly("me.shedaniel:RoughlyEnoughItems-forge:${rei_version}")

    // EMI
//    modCompileOnly("dev.emi:emi-forge:${emi_version}:api")
//    modCompileOnly("dev.emi:emi-forge:${emi_version}")
    modCompileOnly("maven.modrinth:emi:1.1.24+1.20.1+forge")

    // AE2
    modCompileOnly("appeng:appliedenergistics2-forge:${ae2_version}")

    // KubeJS
    modImplementation("dev.latvian.mods:kubejs-forge:${kjs_version}")
    modImplementation("dev.latvian.mods:rhino-forge:${rhino_version}")

    // REI and KubeJS publish parts of their 1.20.1 Forge API through these
    // dependencies, but ForgeGradle's remapped classpath does not keep them
    // transitively in this single-loader setup.
    modImplementation("dev.architectury:architectury-forge:${architectury_version}")
    modImplementation("me.shedaniel.cloth:cloth-config-forge:${cloth_config_version}")
    compileOnly "me.shedaniel.cloth:basic-math:${cloth_basic_math_version}"

    // Oculus / Embeddium are the Forge 1.20.1 equivalents for Iris / Sodium compatibility.
    modImplementation("maven.modrinth:embeddium:${embeddium_version}") { transitive = false }
    // modImplementation("maven.modrinth:oculus:${oculus_version}") { transitive = true }
    runtimeOnly("org.anarres:jcpp:1.4.14")

    // Yoga 1.0.0 is published as Java 21 bytecode. Recompile its sources for the Java 17
    // runtime used by Minecraft Forge 1.20.1 while preserving the public Yoga API.
    yogaSources("org.appliedenergistics.yoga:yoga:${yoga_version}:sources@jar")
    compileOnly "org.jetbrains:annotations:24.1.0"

    // Taffy
    libraries("dev.vfyjxf:taffy:${taffy_version}")
    taffyLibrary("dev.vfyjxf:taffy:${taffy_version}") {
        transitive = false
    }

    annotationProcessor("org.spongepowered:mixin:0.8.5")
    annotationProcessor("org.ow2.asm:asm-tree:9.8")
    annotationProcessor("com.google.code.gson:gson:2.10")
    annotationProcessor("com.google.guava:guava:31.1-jre")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}"))
    implementation("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")
    jarJar("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")

    implementation("org.lwjgl:lwjgl-freetype:3.3.3") { transitive = false }

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'

    // mock
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    def replaceProperties = [
            "mod_id"             : mod_id,
            "version"            : version,
            "loader_version"     : loader_version,
            "forge_version"      : forge_version.split("\\.")[0],
            "minecraft_version"  : minecraft_version,
            "kotlin_for_forge_version": kotlin_for_forge_version,
            "mod_license"        : mod_license,
            "mod_name"           : mod_name,
            "mod_description"    : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId = archivesBaseName
            from components.java
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/weiliangyan/LDLib2-1.20.1-Forge")
            credentials {
                username = System.getenv("GITHUB_ACTOR") ?: "weiliangyan"
                password = System.getenv("GITHUB_TOKEN") ?: System.getenv("GH_TOKEN")
            }
        }
    }
}
